--- a/.github/workflows/frontend_deployment.yaml
+++ b/.github/workflows/frontend_deployment.yaml
@@ -1,1 +1,31 @@
- 
+ name: Build and Deploy Frontend
+
+on:
+  push:
+    branches:
+      - main  # Trigger this workflow only on pushes to the 'main' branch
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16  # Use the Node.js version your project requires
+
+    - name: Install Dependencies
+      run: npm install
+
+    - name: Build Project
+      run: npm run build
+
+    - name: Deploy to S3
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: aws s3 cp dist/ s3://ebook-serverless-application/ --recursive
