--- a/.github/workflows/frontend_deployment.yaml
+++ b/.github/workflows/frontend_deployment.yaml
@@ -1,6 +1,6 @@
- name: Build and Deploy Frontend
+name: Build and Deploy Frontend
 
-on:
+on: 
   push:
     branches:
       - main  # Trigger this workflow only on pushes to the 'main' branch
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18  # Use the Node.js version your project requires
+        node-version: 18  # Use Node.js v18 to match your local environment
 
     - name: Install Dependencies
       run: npm install
@@ -28,4 +28,5 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1  # Specify your AWS region
       run: aws s3 cp dist/ s3://ebook-serverless-application/ --recursive
